--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
     }
 }
 
-// loading
+// loading 小薯條
 
 .loading-wrapper {
     position: fixed;
@@ -30,7 +30,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background:#ACE6F2;
+    background: #fff8a6;
     z-index: 9999;
 }
 
@@ -64,7 +64,7 @@ body {
         .logo {
             width: 60%;
             img {
-                width: 80%;
+                width: 100%;
             }
         }
         .btn-group {
