--- a/rwd.scss
+++ b/rwd.scss
@@ -64,7 +64,7 @@
             right: 80px;
         }
     }
-    .menu {
+    .menu1 {
         height: 90vh;
         .mask{
             padding-top: 50px;
@@ -99,7 +99,7 @@
         }
     }
 
-    .menu {
+    .menu1 {
         height: 70vh;
     }
     .swiper-button-next,
@@ -137,7 +137,7 @@
         font-size: 25px;
     }
 
-    .menu {
+    .menu1 {
         height: 60%;
     }
     .swiper-button-next,
@@ -164,7 +164,7 @@
             height: 50%;
         }
     }
-    .menu {
+    .menu1 {
         height: 50vh;
         .mask{
             .menu-text-content{
@@ -183,14 +183,6 @@
         width: 400px;
         height: 400px;
         margin: 0;
-    }
-
-    .menu-wrap {
-        right: 40px;
-        .toggler {
-            width: 15px;
-            height: 10px;
-        }
     }
 }
 
