--- a/style.scss
+++ b/style.scss
@@ -85,193 +85,16 @@ body {
 
 // menu-wrap漢堡條
 
-:root {
-    --primary-color: rgba($color: #fff8a6, $alpha: 0.6);
-    --overlay-color: rgba(24, 39, 51, 0.85);
-    --menu-speed: 0.75s;
-}
-
-/* MENU STYLES */
+/* 漢堡條 */
 .menu-wrap {
-    border: blanchedalmond;
-    position: absolute;
-    // position: fixed;
-    top: 0;
-    right: 15px;
-    z-index: 99;
     display: none;
+    @include hamburger();
+    @include burgerAtive();
 }
 
-.menu-wrap .toggler {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    opacity: 0;
-}
 
-.menu-wrap .hamburger {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 50px;
-    height: 50px;
-    padding: 1rem;
-    background: var(--primary-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-/* Hamburger Line */
-.menu-wrap .hamburger > div {
-    position: relative;
-    flex: none;
-    width: 100%;
-    height: 2px;
-    background: brown;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
-}
 
-/* Hamburger Lines - Top & Bottom */
-.menu-wrap .hamburger > div::before,
-.menu-wrap .hamburger > div::after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    top: -10px;
-    width: 100%;
-    height: 2px;
-    background: inherit;
-}
-
-/* Moves Line Down */
-.menu-wrap .hamburger > div::after {
-    top: 10px;
-}
-
-/* Toggler Animation */
-.menu-wrap .toggler:checked + .hamburger > div {
-    transform: rotate(135deg);
-}
-
-/* Turns Lines Into X */
-.menu-wrap .toggler:checked + .hamburger > div:before,
-.menu-wrap .toggler:checked + .hamburger > div:after {
-    top: 0;
-    transform: rotate(90deg);
-}
-
-/* Rotate On Hover When Checked */
-.menu-wrap .toggler:checked:hover + .hamburger > div {
-    transform: rotate(225deg);
-}
-
-/* Show Menu */
-.menu-wrap .toggler:checked ~ .menufull {
-    visibility: visible;
-}
-
-.menu-wrap .toggler:checked ~ .menufull > div {
-    transform: scale(1);
-    transition-duration: var(--menu-speed);
-}
-
-.menu-wrap .toggler:checked ~ .menufull > div > div {
-    opacity: 1;
-    transition: opacity 0.4s ease 0.4s;
-}
-
-//
-.menu-wrap .hamburger.active > div {
-    transform: rotate(135deg);
-}
-
-.menu-wrap .hamburger.active > div {
-    transform: rotate(135deg);
-}
-
-/* Turns Lines Into X */
-.menu-wrap .hamburger.active > div:before,
-.menu-wrap .hamburger.active > div:after {
-    top: 0;
-    transform: rotate(90deg);
-}
-
-/* Rotate On Hover When Checked */
-.menu-wrap .hamburger.active:hover > div {
-    transform: rotate(225deg);
-}
-
-/* Show Menu */
-.menu-wrap .hamburger.active ~ .menufull {
-    visibility: visible;
-}
-
-.menu-wrap .hamburger.active ~ .menufull > div {
-    transform: scale(1);
-    transition-duration: var(--menu-speed);
-}
-
-.menu-wrap .hamburger.active ~ .menufull > div > div {
-    opacity: 1;
-    transition: opacity 0.4s ease 0.4s;
-}
-//
-
-.menu-wrap .menufull {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.menu-wrap .menufull > div {
-    background: var(--overlay-color);
-    border-radius: 50%;
-    width: 200vw;
-    height: 200vw;
-    display: flex;
-    flex: none;
-    align-items: center;
-    justify-content: center;
-    transform: scale(0);
-    transition: all 0.4s ease;
-}
-
-.menu-wrap .menufull > div > div {
-    text-align: center;
-    max-width: 90vw;
-    max-height: 100vh;
-    opacity: 0;
-    transition: opacity 0.4s ease;
-}
-
-.menu-wrap .menufull > div > div > ul > li {
-    list-style: none;
-    color: #fff;
-    font-size: 1.5rem;
-    padding: 1rem;
-}
-
-.menu-wrap .menufull > div > div > ul > li > a {
-    color: inherit;
-    text-decoration: none;
-    transition: color 0.4s ease;
-}
 
 // 滿版圖
 .banner {
@@ -410,7 +233,7 @@ h2::before {
 // .swiper-container {
 
 // }
-.menu {
+.menu1 {
     height: 100vh;
     background-image: url("./img/05-黃金美味/菜單背景/調味1.jpg");
     background-position: center;
@@ -631,7 +454,7 @@ footer {
 
 .afd,
 .dsafd{
-    &::hover{
+    &:hover{
         width: 50px;
     }
 }
