--- a/_mixin.scss
+++ b/_mixin.scss
@@ -53,3 +53,157 @@
 //     }
 //   }
 
+@mixin hamburger() {
+    position: fixed;
+    top: 0;
+    right: 5%;
+    z-index: 1;
+    .toggler {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        opacity: 0;
+    }
+    .hamburger {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+        width: 50px;
+        height: 50px;
+        padding: 1rem;
+        // background: var(--primary-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* Hamburger Line */
+        .hamburger-line {
+            position: relative;
+            flex: none;
+            width: 100%;
+            height: 3px;
+            background: #301a01;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.4s ease;
+            &::before {
+                content: "";
+                position: absolute;
+                z-index: 1;
+                top: -10px;
+                width: 100%;
+                height: 3px;
+                background: inherit;
+            }
+            &::after {
+                content: "";
+                position: absolute;
+                z-index: 1;
+                top: 10px;
+                width: 100%;
+                height: 3px;
+                background: inherit;
+            }
+        }
+    }
+
+    .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        > div {
+            background: rgba($color: #050309, $alpha: 0.9);
+            border-radius: 50%;
+            width: 200vw;
+            height: 200vw;
+            display: flex;
+            flex: none;
+            align-items: center;
+            justify-content: center;
+            transform: scale(0);
+            transition: all 0.4s ease;
+            z-index: 15;
+            > div {
+                text-align: center;
+                max-width: 90vw;
+                max-height: 100vh;
+                opacity: 0;
+                transition: opacity 0.4s ease;
+                ul {
+                    li {
+                        list-style: none;
+                        color: #fff;
+                        font-size: 1rem;
+                        padding: 1rem;
+                        a {
+                            color: inherit;
+                            text-decoration: none;
+                            transition: color 0.4s ease;
+                            span {
+                                font-size: 40px;
+                                color: white;
+                                position: relative;
+                                padding: 0 10px;
+                                small {
+                                    position: absolute;
+                                    bottom: 10px;
+                                    left: -25px;
+
+                                    font-size: 20px;
+                                    color: #666666;
+                                    border-bottom: 1px solid #666666;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// 展開漢堡條
+@mixin burgerAtive() {
+    .toggler.active ~ .hamburger > div {
+        transform: rotate(135deg);
+        /* Turns Lines Into X */
+        &::before {
+            top: 0;
+            transform: rotate(90deg);
+        }
+        &::after {
+            top: 0;
+            transform: rotate(90deg);
+        }
+    }
+
+    /* Rotate On Hover When Checked */
+    .toggler.active:hover ~ .hamburger > div {
+        transform: rotate(225deg);
+    }
+
+    /* Show Menu */
+    .toggler.active ~ .menu {
+        visibility: visible;
+        > div {
+            transform: scale(1);
+            transition-duration: var(--menu-speed);
+            > div {
+                opacity: 1;
+                transition: opacity 0.4s ease 0.4s;
+            }
+        }
+    }
+}
